--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "node-sass": "^4.13.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "reactstrap": "^8.4.1",
     "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.4.5",
