--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@types/express": "^4.17.2",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "css-loader": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.9.16",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
