--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "css-loader": "^1.0.1",
+    "dateformat": "^3.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "markdown": "^0.5.0",
     "mongoose": "^5.9.16",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
